# MCP-Server

./: .gitignore  LICENSE  PROGRESS.md  README.md  agent.py  database.py  db_model.txt  internal_report.txt  main.py  mcp_server.py  models.py  pyproject.toml  services.py
static/: chat.html  chat.js
