[project]
name = "mcp-is-project"
version = "0.1.0"
description = "Hello World FastAPI + MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mcp>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
